force-app/main/default/objects/Alquiler_Material__c/Alquiler_Material__c.object-meta.xml
<CustomObject>
    <label>Alquiler Material</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Número alquiler</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alquiler Material</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>