force-app/main/default/objects/Alquiler_Material__c/fields/devuelto__c.field-meta.xml
<CustomField>
    <fullName>devuelto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devuelto</label>
    <type>Checkbox</type>
</CustomField>