force-app/main/default/objects/Alquiler_Material__c/fields/Email_cliente__c.field-meta.xml
<CustomField>
    <fullName>Email_cliente__c</fullName>
    <formula>Socio__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email cliente</label>
    <type>Text</type>
</CustomField>