force-app/main/default/objects/Alquiler_Material__c/fields/Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin__c</fullName>
    <description>Fecha limite para la devolución del material.</description>
    <label>Fecha fin</label>
    <type>Date</type>
</CustomField>