force-app/main/default/objects/Alquiler_Material__c/fields/Socio__c.field-meta.xml
<CustomField>
    <fullName>Socio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Socio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alquileres Materiales</relationshipLabel>
    <relationshipName>Alquileres_Materiales</relationshipName>
    <type>Lookup</type>
</CustomField>