force-app/main/default/objects/Alquiler_Material__c/fields/TEST_Rollback__c.field-meta.xml
<CustomField>
    <fullName>TEST_Rollback__c</fullName>
    <label>TEST Rollback</label>
    <type>TextArea</type>
</CustomField>