force-app/main/default/objects/Alquiler_Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Material__c</columns>
    <columns>Socio__c</columns>
    <columns>Fecha_inicio__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>devuelto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>